# anime_quiz

./: .dockerignore  .git-blame-ignore-revs  .gitignore  COPYING  Dockerfile  Dockerfile.opentelemetry.yml  MANIFEST.in  README.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.opentelemetry.yml  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  uwsgi.cfg
.github/workflows/: main.yml  release.yml  test.yml
anime_quiz/: __init__.py  asgi.py  celery.py  settings.py  settings_gcp.py  settings_prod.py  urls.py  wsgi.py
quiz/: __init__.py  admin.py  animethemes.py  apps.py  gcp.py  mal.py  models.py  shuffle.hy  tasks.hy  tasks.py  tests.py  urls.py  views.py
quiz/migrations/: __init__.py
quiz/static/quiz/: main.css  main.js
quiz/templates/quiz/: quiz.html  results_entry_template.html  results_template.html  username.html
templates/quiz/: quiz.html
